[package]
name = "nanocurrency-types"
version = "0.5.0"
authors = []
description = "A set of types for the Nano cryptocurrency"
license = "BSD-2-Clause"
repository = "https://github.com/kayabaNerve/nanocurrency-types"
edition = "2018"

[dependencies]
blake2 = "0.8"
digest = { version = "0.8", features = ["std"] }
byteorder = { version = "1.4", features = ["i128"] }
num-traits = "0.2"
num-bigint = "0.4.3"
serde = "1.0.130"
serde_derive = "1.0.130"
hex = "0.4.3"
curve25519-dalek = { version = "3.2", features = ["serde"] }
# Needed for thread_rng for ed25519-dalek
rand = { version = "0.7", features = ["std"] }

[dev-dependencies]
serde_json = "1.0.68"
